@@ -1,6 +1,7 @@
-Tue Jul  9 22:17:58 2013  Tanaka Akira  <akr@fsij.org>
+Tue Jul  9 22:24:39 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bary_mul1): No need to invoke MEMZERO at last.
+	  (bary_mul_single): Invoke MEMZERO here.
 
 Tue Jul  9 21:40:01 2013  Kouhei Sutou  <kou@cozmixng.org>
 
